; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_unit.c_new_unr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_unit.c_new_unr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.unrhdr = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"Out of cached memory\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.unrhdr*, i8**, i8**)* @new_unr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @new_unr(%struct.unrhdr* %0, i8** %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.unrhdr*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  store %struct.unrhdr* %0, %struct.unrhdr** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i8** %2, i8*** %7, align 8
  %9 = load %struct.unrhdr*, %struct.unrhdr** %5, align 8
  %10 = getelementptr inbounds %struct.unrhdr, %struct.unrhdr* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 4
  %13 = load i8**, i8*** %6, align 8
  %14 = load i8*, i8** %13, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %20, label %16

16:                                               ; preds = %3
  %17 = load i8**, i8*** %7, align 8
  %18 = load i8*, i8** %17, align 8
  %19 = icmp ne i8* %18, null
  br label %20

20:                                               ; preds = %16, %3
  %21 = phi i1 [ true, %3 ], [ %19, %16 ]
  %22 = zext i1 %21 to i32
  %23 = call i32 @KASSERT(i32 %22, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %24 = load i8**, i8*** %6, align 8
  %25 = load i8*, i8** %24, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %32

27:                                               ; preds = %20
  %28 = load i8**, i8*** %6, align 8
  %29 = load i8*, i8** %28, align 8
  store i8* %29, i8** %8, align 8
  %30 = load i8**, i8*** %6, align 8
  store i8* null, i8** %30, align 8
  %31 = load i8*, i8** %8, align 8
  store i8* %31, i8** %4, align 8
  br label %37

32:                                               ; preds = %20
  %33 = load i8**, i8*** %7, align 8
  %34 = load i8*, i8** %33, align 8
  store i8* %34, i8** %8, align 8
  %35 = load i8**, i8*** %7, align 8
  store i8* null, i8** %35, align 8
  %36 = load i8*, i8** %8, align 8
  store i8* %36, i8** %4, align 8
  br label %37

37:                                               ; preds = %32, %27
  %38 = load i8*, i8** %4, align 8
  ret i8* %38
}

declare dso_local i32 @KASSERT(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
